# dsci511-group-assignment

./: .gitignore  README.md  README_ONBOARDING.md  pyproject.toml
assignment1/: Assignment1.ipynb
assignment1/data/books/: metadata.json
